tests/baselines/reference/jsFileCompilationTypeParameterSyntaxOfClass.errors.txt
tests/cases/compiler/a.js(1,9): error TS8004: 'type parameter declarations' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    class C<T> { }
            ~
!!! error TS8004: 'type parameter declarations' can only be used in a .ts file.